# officialsitefinder_skills

./: .env.example  .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.md  TODO.md  criteria.txt  officialsitefinder_skills_v3.md  officialsitefinder_skills_v4.md  officialsitefinder_skills_v5.md  officialsitefinder_skills_v6.md  pyproject.toml
archive/: CLAUDE.md.bak  README.md.bak  officialsitefinder_skills.md  officialsitefinder_skills_v2.md  officialsitefinder_skills_v3.md  review.md  review_v2.md
archive/compare_address_full_tool/: __init__.py  __main__.py  test_compare_address_full.py
archive/extract_address_skill/: SKILL.md
archive/extract_address_tool/: CLAUDE.md  debug_test.py  extract.py  test_extract.py
archive/google_search_mcp/: __init__.py
compare_address_tool/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
compare_address_tool/compare_address_tool/: __init__.py  __main__.py
compare_address_tool/tests/: __init__.py  test_compare_address.py
doc/: overview.md
extract_address_tool/: __init__.py  __main__.py  extract.py  test_extract.py
extract_full_address_tool/: __init__.py  extract.py  test_extract.py
google_search_mcp/: CLAUDE.md  __main__.py
google_search_tool/: README.md  __init__.py  __main__.py
officialsite_finder_tool/: README.md  __init__.py  __main__.py  test_main.py
playwright_download_tool/: .gitignore  Dockerfile  README.md  download.py  extract.py  requirements.txt  test_extract.py
tests/: __init__.py  create_search_cache.py  test_address_variants.py  test_google_search_mcp.py  test_google_search_tool.py  test_officialsite_finder.py  test_officialsite_finder_batch.py
tests/resource/: sample_from_scuel.tsv  sample_from_scuel_10.tsv  search_cache.json
